--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello Page</title>
+    <title>Hello Page 1</title>
 </head>
 <body>
     <h1>Hello Worlds</h1>
