--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <h1>Hello Worlds</h1>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css">
+    <i class="fas fa-check-circle fa-3x"></i>
 </body>
 </html>
