--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
     <title>Hello Page 1</title>
+    <!-- Include Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css">
 </head>
 <body>
     <h1>Hello Worlds</h1>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css">
-    <i class="fas fa-check-circle fa-3x"></i>
+    <!-- Display Font Awesome icons -->
+    <i class="fas fa-check-circle fa-3x"></i> <!-- Check-circle icon -->
+    <i class="fab fa-docker fa-3x"></i> <!-- Docker icon -->
+    <i class="fab fa-java fa-3x"></i>'
+    <i class="fas fa-database fa-3x"></i>'
 </body>
 </html>
